--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "kuccps-cluster-system",
+  "name": "kuccps-cluster-react",
+  "private": true,
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "build:css": "tailwindcss -i ./static/src/input.css -o ./static/css/tailwind.css --minify",
-    "watch:css": "tailwindcss -i ./static/src/input.css -o ./static/css/tailwind.css --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  "dependencies": {
+    "firebase": "^11.10.0",
+    "lucide-react": "^0.574.0",
+    "papaparse": "^5.5.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.1"
+  },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.4.12"
   }
 }
